# GetProperties

./: .gitignore  README.md  get_properties.ipynb  get_properties_functions_to_parallelize.py  goodvibes_functions.py  gpenv_311.yml  gpenv_312.yml  new_property_functions.py  original_functions.py  prelim_df.csv  property_functions.py  pyproject.toml  utils.py
GetProperties/: __init__.py  get_properties_functions_to_parallelize.py  goodvibes_functions.py  property_functions.py  utils.py
data/: figure1.cdxml  figures.cdxml
data/failed/: 1236666_1.mol  1236666_2.mol  12378181_2.mol
data/small_sample/: 12300592_1.mol  12300592_2.mol  12300592_3.mol  12300592_4.mol  12318939_1.mol  12318939_2.mol  12318939_3.mol  12326192_1.mol  12326192_2.mol  12326192_3.mol  12326192_4.mol  12326824_1.mol  12326824_10.mol  12326824_11.mol  12326824_12.mol  12326824_13.mol  12326824_14.mol  12326824_15.mol  12326824_16.mol  12326824_17.mol  12326824_18.mol  12326824_19.mol  12326824_2.mol  12326824_20.mol  12326824_21.mol  12326824_22.mol  12326824_23.mol  12326824_3.mol  12326824_4.mol  12326824_5.mol  12326824_6.mol  12326824_7.mol  12326824_8.mol  12326824_9.mol  12326827_1.mol  12326827_2.mol  12326827_3.mol  12326832_1.mol  12326832_10.mol  12326832_11.mol  (+59 more)
data/test_files/: Ac2_1.mol  Ac2_2.mol  Ac2_3.mol  Ac2_4.mol  Ac2_5.mol  (+9 more)
results/: README.md
tests/: conformer_specific_properties_new.csv  conformer_specific_properties_old.csv  evaluate_test_2.py  individual_properties_missing_values.xlsx  raymond_summary_props.csv  summary_properties_new.csv  summary_properties_old.csv
(+378 files in other folders)
