[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "GetProperties"
version = "0.1.0"
requires-python = ">=3.9"
description = "For extracting properties from computational chemistry program log files."
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["GetProperties"]